fix about and more lighthouse stuff including contrast on oasis blue

--- a/src/pages/00-global.sass
+++ b/src/pages/00-global.sass
@@ -2,7 +2,7 @@
 @import "fonts/Inter/inter.css"
 
 \:root
-    --oasis-blue: rgb(0, 120, 180)
+    --oasis-blue: rgb(46, 184, 255)
     --dark-red: darkred
     --text-color: #f0f0f0
 
